trunk/Archive2/c5/cbc6cc97411c4e/output
main.cpp: In function 'int main()':
main.cpp:25:31: error: cannot convert 'void (Derived::*)(int)' to 'void (Base2::*)(int)' in initialization
     void (Base2::* px)(int) = pd;
                               ^
main.cpp:25:27: warning: unused variable 'px' [-Wunused-variable]
     void (Base2::* px)(int) = pd;
                           ^
